# Funding-bot

./: # Margin Schedule.txt  # Vision and Roadmap.txt  .cursorrules  .gitattributes  .gitignore  ANALYSIS_FIXES_NEEDED.md  API_CONTEXT.md  AUDIT_CHECKLIST.md  CHANGELOG_DETAILED.md  CHECKLIST_OPTIMIERUNG.md  CLAUDE.md  CONTRIBUTING.md  CUserskoopmfunding-botloris_api.json  DEBUG_PROMPT_FULL_ANALYSIS.md  DEPLOYMENT_READY.md  FIX_ADAPTER_CLOSE_BUGS.md  FIX_CRITICAL_BUGS.md  FIX_FARM_TRADE_MARKING.md  FUNDING_TRACKER_GUIDE.md  Get markets – API Documentation.html  HISTORY.md  KNOWLEDGE.md  LIGHTER_DECIMALS_QUICKREF.md  LIGHTER_FIX_SUMMARY.md  LIGHTER_IMPROVEMENTS_ANALYSIS.md  LIGHTER_ORDER_FIX.md  LIGHTER_PRICE_FIX.md  LIGHTER_VS_X10_ORDER_COMPARISON.md  MARKET_STATS_FIX_VERIFICATION.md  PLANNING.md  PNL_TRACKING_ANALYSIS.md  PROJECT_STRUCTURE.md  README.md  ROADMAP_ANALYSE_20251206.md  ROADMAP_VERIFICATION_REPORT.md  START_BOT2.bat  TASK.md  TRADE_LOGIC_EXPLANATION.md  analyze_db.py  analyze_pnl.py  (+77 more)
.claude/: SUPERCLAUDE_QUICKREF.md  SUPERCLAUDE_SETUP.md  settings.local.json
.github/: copilot-instructions.md
.serena/: project.yml
Backup/: base_adapter.py  lighter_adapter.py  monitor_funding.py  prediction.py  x10_adapter.py
Backup_v4/: config.py  monitor_funding.py  x10_adapter.py
Extended-TS-SDK-master/: .gitignore  .npmignore  API_COVERAGE.md  LICENSE  benchmark_ts.ts  env.template  jest.config.js  tsconfig.examples.json  tsconfig.json
Get markets – API Documentation_files/: screen-53017ba4.css
backup_v2_final/: binance_adapter.py  get_exchange_symbols_combined.py  lighter_adapter.py  monitor_funding.py  symbols_common.txt  symbols_diff.txt  symbols_lighter_only.txt  symbols_x10_only.txt  test_data_fetch.py  x10_adapter.py
backup_v3/: config.py  lighter_adapter.py  monitor_funding_v3.py  x10_adapter_1.py
claudedocs/: BACKILL_VERIFICATION_REPORT_20250115.md  EXCHANGE_RATE_LIMITS_RESEARCH_20260114.md  PHASE_1_PERFORMANCE_ANALYSIS_20260114.md  PHASE_1_PREFLIGHT_LIQUIDITY_COMPLETE_20260115.md  PHASE_1_PREMIUM_OPTIMIZED_PLAN_20260114.md  PHASE_COMPLETE_PREFLIGHT_LIQUIDITY_20260115.md  PLAN_ORDERBOOK_OPTIMIZATION_20260115.md  analysis_funding_cadence_blocker_20260113.md  analyze_offline_first_import_guard_fix_20260114.md  bot_behavior_verification_table_20260114.md  fix_offline_tests_sdk_import_guard_20260113.md  git_commit_summary_20260113.md  git_commit_summary_20260114.md  implement_import_guard_verification_20260114.md  offline_first_import_guard_verification_20260114.md  ondo_orderbook_fix_complete_20260115.md  quality_gate_reflection_20260113.md  quality_gate_reflection_20260114.md  research_exchange_ecosystems_2025-01-17.md  research_funding_cadence_verification_20260113.md  research_orderbook_depth_api_20260115.md  research_x10_liquidity_integration_20260115.md  test_report_offline_20260113.md  (+3 more)
src/: main.py  (+31 more)
(+1136 files in other folders)
